# ComfyUI-Lora-Manager

./: .gitignore  LICENSE  README.md  __init__.py  config.py  lora_manager.py  manifest.json  nodes.py  pyproject.toml  requirements.txt  settings.json.example  simple_test.py  standalone.py  test_parser.py  update_logs.md
.github/: FUNDING.yml
.github/workflows/: sync-upstream.yml  update.yml
nodes/: lora_gateway.py  lora_loader.py
pages/: checkpoints.html  loras.html
py/: config.py  lora_manager.py  server_routes.py
py/metadata_collector/: __init__.py  constants.py  metadata_hook.py  metadata_processor.py  metadata_registry.py  node_extractors.py
py/nodes/: debug_metadata.py  lora_loader.py  lora_stacker.py  save_image.py  trigger_word_toggle.py  utils.py  wanvideo_lora_select.py
py/recipes/: __init__.py  base.py  constants.py  factory.py
py/routes/: api_routes.py  base_model_routes.py  checkpoint_routes.py  checkpoints_routes.py  example_images_routes.py  lora_routes.py  misc_routes.py  recipe_routes.py  stats_routes.py  update_routes.py  usage_stats_routes.py
py/services/: base_model_service.py  checkpoint_scanner.py  civitai_client.py  download_manager.py  file_monitor.py  lora_hash_index.py  lora_scanner.py  lora_service.py  model_cache.py  model_hash_index.py  model_scanner.py  model_service_factory.py  recipe_cache.py  recipe_scanner.py  service_registry.py  settings_manager.py  websocket_manager.py
py/utils/: constants.py  exif_utils.py  (+13 more)
refs/: civitai_api_model_by_versionId.json  flux_prompt.json  jpeg_civitai_exif_userComment_example  output.json  prompt.json  recipe.json  test_output.txt
routes/: api_routes.py  lora_routes.py
services/: civitai_client.py  download_manager.py  file_monitor.py  lora_cache.py  lora_scanner.py  websocket_manager.py
templates/: base.html  checkpoints.html  embeddings.html  loras.html  recipes.html  statistics.html
utils/: file_utils.py  model_utils.py  models.py
workflow/: lora_manager_flux_example.json  lora_manager_il_pony_example.json
(+200 files in other folders)
