[project]
name = "comfyui-lora-manager"
description = "LoRA Manager for ComfyUI - Access it at http://localhost:8188/loras for managing LoRA models with previews and metadata integration."
version = "0.7.36"
license = {file = "LICENSE"}
dependencies = [
    "aiohttp",
    "jinja2", 
    "safetensors",
    "watchdog"
]

[project.urls]
Repository = "https://github.com/willmiao/ComfyUI-Lora-Manager"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "willmiao"
DisplayName = "ComfyUI-Lora-Manager"
Icon = ""
